transforma o headers do versel.json para um array

--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,12 @@
   "headers": [
     {
       "source": "/(.*)",
-      "headers": {
-        "X-Served-By": "Vercel"
-      }
+      "headers": [
+        {
+          "key": "X-Served-By",
+          "value": "Vercel"
+        }
+      ]
     }
   ]
 }
